# data_process

./: .gitignore  check_data.py  check_difference.py  check_ds_loading.py  check_loading.py  check_loading.sh  check_sample.py  check_sample_filter.py  check_sample_loading.py  check_sample_loading.sh  check_stats.py  check_stats.sh  check_stats_text.py  convert2bytes.py  convert2mds.py  convert2mds_bytes.py  convert_datasets.py  download_dsv3.py  emo_instructions.json  filter_short.py  gen_instructions.json  generate_samples.py  json2excel.py  main.py  missing_test.json  missing_train.json  move.sh  nemo-normalization.py  open_shell_bare_metal.sh  pyproject.toml  qa_generation_paraliguistic.py  qwen_asr.py  remove_instruction_audio.py  sample.py  sample_copy.py  sen_instructions.json  st2asr.py  test.py  test.txt  test_0.txt  (+7 more)
6_IMDA_DS_ER_MIX_data_gen/: host_model_judge_llama_3_70b_instruct_awq.sh  imda_GR_reformat.py  imda_MIX_reformat.py  imda_accent_reformat.py  test.py
IMDA/: INTRO_1-3.txt  INTRO_4-6.txt  LICENCE.txt  PROMPT_INFO_&_ACKNOWLEDGEMENTS.txt  Part_1_Speaker_Metadata.xlsx  Part_3_Speaker_Metadata.xlsx  Part_4_Speaker_Metadata.xlsx  Technical_Reference_(NSC).docx  _0_xlsx2json.py  _10_normalization.py  _1_aligner.py  _1_calculate_shift.py  _1_check_file.py  _1_create_manifest.py  _1_fix_mis_align.py  _1_fix_mis_align_bak.py  _1_fix_textgrid.py  _1_mix_wav.py  _1_remove_checked.py  _1_remove_other.py  _2_build.imda.part3.py  _2_build.imda.part4.mono.py  _2_build.imda.part6.py  _2_create_manifest.py  _3_build.imda.asr.part12.py  _3_build.imda.asr.part3456.py  (+78 more)
(+287 files in other folders)
